Add a config file helper. (#2203)
Add a config file helper.

This will be used in a subsequent commit to modify the msbuild.exe.config file.

--- a/main/src/core/MonoDevelop.Core/MonoDevelop.Core.csproj
+++ b/main/src/core/MonoDevelop.Core/MonoDevelop.Core.csproj
@@ -434,6 +434,7 @@
     <Compile Include="MonoDevelop.Projects.Extensions\IAssemblyReferenceHandler.cs" />
     <Compile Include="MonoDevelop.Projects.MD1\MD1DotNetProjectHandler.cs" />
     <Compile Include="MonoDevelop.Projects.MD1\MD1FileFormat.cs" />
+    <Compile Include="MonoDevelop.Projects.MSBuild\ConfigFileUtilities.cs" />
     <Compile Include="MonoDevelop.Projects.MSBuild\MSBuildFileFormat.cs" />
     <Compile Include="MonoDevelop.Projects.MSBuild\SlnFileFormat.cs" />
     <Compile Include="MonoDevelop.Projects.MSBuild\MSBuildProjectService.cs" />
