[Icons][Ide] .NET Core platform icons

--- a/main/src/addins/MonoDevelop.DotNetCore/MonoDevelop.DotNetCore.csproj
+++ b/main/src/addins/MonoDevelop.DotNetCore/MonoDevelop.DotNetCore.csproj
@@ -199,6 +199,114 @@
     <EmbeddedResource Include="Properties\MonoDevelop.DotNetCore.addin.xml">
       <LogicalName>MonoDevelop.DotNetCore.addin.xml</LogicalName>
     </EmbeddedResource>
+    <EmbeddedResource Include="images\project-netcore-32.png">
+      <LogicalName>project-netcore-32.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="images\project-netcore-32%402x.png">
+      <LogicalName>project-netcore-32@2x.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="images\project-netcore-32~dark.png">
+      <LogicalName>project-netcore-32~dark.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="images\project-netcore-32~dark%402x.png">
+      <LogicalName>project-netcore-32~dark@2x.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="images\project-netcore-32~dark~sel.png">
+      <LogicalName>project-netcore-32~dark~sel.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="images\project-netcore-32~dark~sel%402x.png">
+      <LogicalName>project-netcore-32~dark~sel@2x.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="images\project-netcore-32~sel.png">
+      <LogicalName>project-netcore-32~sel.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="images\project-netcore-32~sel%402x.png">
+      <LogicalName>project-netcore-32~sel@2x.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="images\project-netcore-console-32.png">
+      <LogicalName>project-netcore-console-32.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="images\project-netcore-console-32%402x.png">
+      <LogicalName>project-netcore-console-32@2x.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="images\project-netcore-console-32~dark.png">
+      <LogicalName>project-netcore-console-32~dark.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="images\project-netcore-console-32~dark%402x.png">
+      <LogicalName>project-netcore-console-32~dark@2x.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="images\project-netcore-console-32~dark~sel.png">
+      <LogicalName>project-netcore-console-32~dark~sel.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="images\project-netcore-console-32~dark~sel%402x.png">
+      <LogicalName>project-netcore-console-32~dark~sel@2x.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="images\project-netcore-console-32~sel.png">
+      <LogicalName>project-netcore-console-32~sel.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="images\project-netcore-console-32~sel%402x.png">
+      <LogicalName>project-netcore-console-32~sel@2x.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="images\project-netcore-console-template.png">
+      <LogicalName>project-netcore-console-template.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="images\project-netcore-console-template%402x.png">
+      <LogicalName>project-netcore-console-template@2x.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="images\project-netcore-console-template~dark.png">
+      <LogicalName>project-netcore-console-template~dark.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="images\project-netcore-console-template~dark%402x.png">
+      <LogicalName>project-netcore-console-template~dark@2x.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="images\project-netcore-template.png">
+      <LogicalName>project-netcore-template.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="images\project-netcore-template%402x.png">
+      <LogicalName>project-netcore-template@2x.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="images\project-netcore-template~dark.png">
+      <LogicalName>project-netcore-template~dark.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="images\project-netcore-template~dark%402x.png">
+      <LogicalName>project-netcore-template~dark@2x.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="images\project-netcore-test-32.png">
+      <LogicalName>project-netcore-test-32.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="images\project-netcore-test-32%402x.png">
+      <LogicalName>project-netcore-test-32@2x.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="images\project-netcore-test-32~dark.png">
+      <LogicalName>project-netcore-test-32~dark.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="images\project-netcore-test-32~dark%402x.png">
+      <LogicalName>project-netcore-test-32~dark@2x.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="images\project-netcore-test-32~dark~sel.png">
+      <LogicalName>project-netcore-test-32~dark~sel.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="images\project-netcore-test-32~dark~sel%402x.png">
+      <LogicalName>project-netcore-test-32~dark~sel@2x.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="images\project-netcore-test-32~sel.png">
+      <LogicalName>project-netcore-test-32~sel.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="images\project-netcore-test-32~sel%402x.png">
+      <LogicalName>project-netcore-test-32~sel@2x.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="images\project-netcore-test-template.png">
+      <LogicalName>project-netcore-test-template.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="images\project-netcore-test-template%402x.png">
+      <LogicalName>project-netcore-test-template@2x.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="images\project-netcore-test-template~dark.png">
+      <LogicalName>project-netcore-test-template~dark.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="images\project-netcore-test-template~dark%402x.png">
+      <LogicalName>project-netcore-test-template~dark@2x.png</LogicalName>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <InternalsVisibleTo Include="DotNetCore.Debugger" />
