--- a/main/src/core/MonoDevelop.Ide/MonoDevelop.Ide.csproj
+++ b/main/src/core/MonoDevelop.Ide/MonoDevelop.Ide.csproj
@@ -6389,6 +6389,30 @@
     <EmbeddedResource Include="icons\platform-macos-16~dark~sel%402x.png">
       <LogicalName>platform-macos-16~dark~sel@2x.png</LogicalName>
     </EmbeddedResource>
+    <EmbeddedResource Include="icons\platform-netcore-16.png">
+      <LogicalName>platform-netcore-16.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="icons\platform-netcore-16%402x.png">
+      <LogicalName>platform-netcore-16@2x.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="icons\platform-netcore-16~dark.png">
+      <LogicalName>platform-netcore-16~dark.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="icons\platform-netcore-16~dark%402x.png">
+      <LogicalName>platform-netcore-16~dark@2x.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="icons\platform-netcore-16~sel.png">
+      <LogicalName>platform-netcore-16~sel.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="icons\platform-netcore-16~sel%402x.png">
+      <LogicalName>platform-netcore-16~sel@2x.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="icons\platform-netcore-16~dark~sel.png">
+      <LogicalName>platform-netcore-16~dark~sel.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="icons\platform-netcore-16~dark~sel%402x.png">
+      <LogicalName>platform-netcore-16~dark~sel@2x.png</LogicalName>
+    </EmbeddedResource>
     <EmbeddedResource Include="icons\platform-other-16.png">
       <LogicalName>platform-other-16.png</LogicalName>
     </EmbeddedResource>
